# Multidimensional-geometrical-editor

./: .desktop  .gitignore  CMakeLists.txt  LICENSE  NDEditor.desktop  OLD_README.md  README.md  configmanager.cpp  glwidget.cpp  logger.h  main.cpp  mainwindow.cpp  presenterMain.cpp  presenterMain.h  resources.qrc  resources.rc  window.cpp  window.h
.github/workflows/: build.yml
MultidimensionalGeometricEditor/: CMakeLists.txt  MultidimensionalGeometricEditor.cpp  MultidimensionalGeometricEditor.h
android/: AndroidManifest.xml
android/res/values/: strings.xml
forms/: mainWindow.ui
images/: app_icon.icns
model/: NDShape.cpp  NDShape.h  projection.cpp  projection.h  rotator.cpp  rotator.h  scene.cpp  scene.h  sceneColorificator.cpp  sceneColorificator.h
model/opengl/graphics/: sceneGeometryManager.cpp  sceneGeometryManager.h
model/opengl/input/: sceneInputHandler.cpp  sceneInputHandler.h
model/opengl/objectController/: cameraController.cpp  cameraController.h
model/opengl/other/: axisSystem.cpp  axisSystem.h
shaders/: depth_fragment.glsl  depth_vertex.glsl  fragment_shader.glsl  main_fragment.glsl  main_vertex.glsl  shadow_fragment.glsl  shadow_vertex.glsl  vertex_shader.glsl
tests/: NDShape.cc
tools/: configManager.cpp  configManager.h  logger.cpp  numTools.cpp  numTools.h  sceneSerialization.h
view/: NDShapeEditorDialog.cpp  NDShapeEditorDialog.h  addSceneObjectDialog.cpp  addSceneObjectDialog.h  adjacencyMatrixView.cpp  adjacencyMatrixView.h  axesGroupBox.cpp  axesGroupBox.h  mainWindow.cpp  mainWindow.h  mainWindowTabWidget.cpp  mainWindowTabWidget.h  mainwindow.cpp  mainwindow.h  sceneObjectEditorWidget.cpp  sceneObjectEditorWidget.h  sceneObjectListView.cpp  sceneObjectListView.h  sceneRenderer.cpp  sceneRenderer.h  sceneRendererWidget.cpp  sceneRendererWidget.h  wheelShiftTableView.cpp  wheelShiftTableView.h
view/commands/: addSceneObjectCommand.cpp  addSceneObjectCommand.h  changeSceneObjectCommand.cpp  changeSceneObjectCommand.h  removeSceneObjectCommand.cpp  removeSceneObjectCommand.h  shapeCommand.cpp  shapeCommand.h
view/dataModels/: adjacencyMatrixModel.cpp  adjacencyMatrixModel.h  rotatorTableModel.cpp  rotatorTableModel.h  sceneObjectModel.cpp  sceneObjectModel.h  vertexTableModel.cpp  vertexTableModel.h
view/delegates/: noHoverDelegate.cpp  noHoverDelegate.h  rotatorDelegate.cpp  rotatorDelegate.h  sceneObjectDelegate.cpp  sceneObjectDelegate.h
